--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,8 @@
 {
   "loader_message": "Loading...",
   "footer_message": "By playing, you agree to {privacy_policy} and {terms_of_service}",
-  "introduction_title": "Let's Play",
-  "introduction_subtitle": "Play the quiz",
+  "introduction_title": "Pronostiquez les {quiz}",
+  "introduction_subtitle": "",
   "play_button": "Play",
   "play_with_service_button": "Jouez avec {service}",
   "loging_in_message": "Waiting for login to complete...",
@@ -10,9 +10,14 @@
   "result_subtitle": "You Scored {score} after {attempts, plural, one{one attempt} other{# attemps}} in {seconds, plural, one{one second} other{# seconds}}.",
   "replay": "Replay",
   "complete_your_profile": "Complete your profile",
+  "finish_quiz_button": "Enregistrer",
   "save_profile_button": "Save profile",
   "thanks_title": "Thanks for playing!",
   "thanks_subtitle": "Thanks subtitle",
+  "next_step":"Next",
+  "result_step":"Recap",
+  "intro_step":"Démarrage",
+  "prev_step":"Previous",
   "see_who_played":"Et découvrez lesquels de vos amis ont participé",
   "footer_message":"Ⓒ Silenzio, Hull 2015"
 }
