--- a/locales/en.json
+++ b/locales/en.json
@@ -5,12 +5,16 @@
   "introduction_subtitle": "",
   "play_button": "Play",
   "play_with_service_button": "Jouez avec {service}",
-  "loging_in_message": "Waiting for login to complete...",
+  "logging_in_message": "Waiting for login to complete...",
   "result_title": "Bravo",
   "result_subtitle": "You Scored {score} after {attempts, plural, one{one attempt} other{# attemps}} in {seconds, plural, one{one second} other{# seconds}}.",
   "replay": "Replay",
   "complete_your_profile": "Complete your profile",
-  "finish_quiz_button": "Enregistrer",
+  "finish_quiz_button": "Enregistrer mes pronostics",
+  "finish_quiz_button_progress": "Enregistrement...",
+  "finish_quiz_button_success": "Enregistré",
+  "finish_quiz_button_error": "Une erreur est survenue !",
+  "update_quiz_button": "Mettre à jour mes pronostics",
   "save_profile_button": "Save profile",
   "thanks_title": "Thanks for playing!",
   "thanks_subtitle": "Thanks subtitle",
@@ -18,6 +22,8 @@
   "result_step":"Recap",
   "intro_step":"Démarrage",
   "prev_step":"Previous",
+  "share_text":"Venez faire vos prédictions sur les vainqueurs des Oscar et des César",
+  "share_label":"Partager le jeu",
   "see_who_played":"Et découvrez lesquels de vos amis ont participé",
   "footer_message":"Ⓒ Silenzio, Hull 2015"
 }
