--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,7 @@
   "intro_step":"Démarrage",
   "prev_step":"Previous",
   "facebook_share_text":"Je viens de faire mes pronostics sur les Oscars et les César !",
-  "twitter_share_text":"Je viens de faire mes pronostics sur les Oscars et les César !",
+  "twitter_share_text":"Je viens de faire mes pronostics sur les #Oscars2015 et les #César2015",
   "google_share_text":"Je viens de faire mes pronostics sur les Oscars et les César !",
   "share_label":"Partager le jeu",
   "see_who_played":"Et découvrez lesquels de vos amis ont participé",
